--- a/src/scss/_navigation.scss
+++ b/src/scss/_navigation.scss
@@ -118,3 +118,10 @@
 	background-color: $dark_green;
 	color: #fff;
 }
+
+@media screen and (max-width: 767px){
+	.navbar-default .navbar-nav .open .dropdown-menu > li > a,
+	.navbar-default .navbar-nav .open .dropdown-menu > li > a:hover {
+		color: #fff;
+	}
+}
